# task-pos

./: .gitignore  .pyre_configuration  PRD.md  PROJECT_SUMMARY.md  README.md  TECH_STACK.md  docker-compose.yml  pyrightconfig.json  run_app.bat
backend/: .env.example  Dockerfile  README.md  add_notification_enum_values.py  add_performance_indexes.py  alembic.ini  check_enums.py  check_tickets.py  crash_log.txt  create_schema.py  debug_kanban_move.py  debug_rishie_tasks.py  do_seed.py  drop_hr_tables.py  fix_db.py  fix_db_schema.py  fix_enums.py  fix_hr.py  fix_intern_approval_status.py  fix_notifications_db.py  get_user.py  migrate_fix_kanban.py  migrate_hr_tables.py  migrate_support_enums.py  migrate_timesheets.py  migrate_user_search_index.py  patch.py  patch2.py  pyproject.toml  reset_db.py  scratch_query.py  seed_admin.py  seed_landing.py  seed_users.py  setup_db.py  test_connection.py  test_db_conn.py  test_integration.py  test_internal.py  test_internal_full.py  (+8 more)
backend/alembic/: env.py
backend/alembic/versions/: 5a25e5c4c723_add_enterprise_task_management_models.py  8f3b2c2d19a1_add_tenant_scope_to_hr_records.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  analytics.py  attendance.py  board.py  calendar.py  capacity.py  chat.py  communication.py  document.py  employee.py  hr_hierarchy.py  hr_records.py  landing.py  milestone.py  notification.py  org_team.py  project.py  rbac.py  support.py  task.py  task_workflow.py  tenant.py  timesheet.py  user.py  workflow.py
backend/app/schemas/: __init__.py  analytics.py  board.py  capacity.py  dashboard.py  employee.py  kanban.py  landing.py  notification.py  org_team.py  project.py  rbac.py  reports.py  support.py  task.py  team.py  tenant.py  timesheet.py  user.py
backend/app/scripts/: seed.py
backend/app/services/: __init__.py  ai_agent_engine.py  analytics.py  auth.py  board.py  capacity.py  comment.py  employee.py  (+24 more)
backend/scratch/: test_direct_conn.py  test_direct_conn_v2.py  test_direct_conn_v3.py
(+154 files in other folders)
